--- a/GipTerminal21/MainWindow.xaml
+++ b/GipTerminal21/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GipTerminal21"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="1080" Width="1920" WindowStyle="None" WindowState="Maximized" Closing="Window_Closing" Background="#FF242424">
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <VirtualizingStackPanel x:Name="ContentSP"/>
+    </ScrollViewer>
 </Window>
