--- a/UserManager/App.xaml
+++ b/UserManager/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="GipTerminal21.App"
+﻿<Application x:Class="UserManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GipTerminal21"
-             StartupUri="SplashWindow.xaml" Startup="App_OnStartup">
+             xmlns:local="clr-namespace:UserManager"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
